--- a/experiments/tcxtc/notebooks/Final_Model.ipynb
+++ b/experiments/tcxtc/notebooks/Final_Model.ipynb
@@ -18,53 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
-      "/usr/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import sys\n",
-    "sys.path.insert(0, '../../..')\n",
-    "\n",
-    "from os.path import join\n",
-    "from os import environ, listdir\n",
-    "\n",
-    "import h5py\n",
-    "import numpy as np\n",
-    "import cv2\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from pyphoon.app.utils import load_h5datachunks, parse_to_tcxtc_task\n",
-    "from pyphoon.app.preprocess import MeanImagePreprocessor\n",
-    "from pyphoon.app.callbacks import StoreModelWeights, OurTensorBoard, LossHistory\n",
-    "from pyphoon.app.utils import data_generator_from_chunklist\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from tensorboard.backend.event_processing.event_accumulator import EventAccumulator\n",
-    "# Import keras libraries\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, Activation\n",
-    "from keras.layers.normalization import BatchNormalization\n",
-    "from keras.optimizers import SGD"
+    "sys.path.insert(0, '../../..')"
    ]
   },
   {
@@ -80,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from os import environ\n",
     "environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\""
    ]
   },
@@ -97,8 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from os import listdir\n",
+    "\n",
     "# Paths where data is stored\n",
-    "dataset_dir = '/root/fs9/lucas/data/datasets/year_512/'\n",
+    "dataset_dir = '/root/fs9/lucas/data/datasets/year_256/'\n",
     "chunk_filenames = listdir(dataset_dir)\n",
     "train_chunk_filenames = chunk_filenames[:27]\n",
     "valid_chunk_filenames = chunk_filenames[27:35]\n",
@@ -165,6 +139,8 @@
     }
    ],
    "source": [
+    "from pyphoon.app.utils import load_h5datachunks\n",
+    "\n",
     "X_train, Y_train, idx_train, seqno_train = load_h5datachunks(dataset_dir,\n",
     "                                                             train_chunk_filenames, \n",
     "                                                             features=['data', 'class', 'idx', 'seq_no'],\n",
@@ -191,6 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.1 Adapting the data to our needs\n",
     "Since our task is focused on the binary distinction between *Tropical Cyclones* and *Extratropical Cyclones* we use the method `parse_to_tcxtc_task` prior tu training. This makes sure that we have two labels: 0 for *Tropical Cyclones* and 1 for *Extratropical Cyclones*. Furthermore, we make sure that we have a balanced category distribution, which basically means two things:\n",
     "\n",
     "1. The amount of xTC and TC samples is roughly of 50% each.\n",
@@ -199,10 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test...\n",
+      "valid...\n",
+      "train...\n"
+     ]
+    }
+   ],
    "source": [
+    "from pyphoon.app.utils import parse_to_tcxtc_task\n",
+    "\n",
     "# test\n",
     "print(\"test...\")\n",
     "for i in range(len(Y_test)):\n",
@@ -245,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -274,12 +263,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that to preprocess the images (centre and normalise) we require the preprocessing parameters. Hence, these parameters will depend on the dataset being used. Currently, there are two dataset versions:\n",
+    "Note that to preprocess the images (centre and normalise) we require the preprocessing parameters. Hence, these parameters will depend on the dataset being used. Here the trainig, validation and test datasets have been generated at sequence level. That is, images belonging to the same typhoon sequence find themselves only in one set. In addition, sequences from old typhoons have been used for training, while newer are used for testing. These parameters are found under `'../preprocessing_year.h5'`. \n",
     "\n",
-    "- **year sequence**: The trainig, validation and test datasets have been generated at sequence level. That is, images belonging to the same typhoon sequence find themselves only in one set. In addition, sequences from old typhoons have been used for training, while newer are used for testing. These parameters are found under `'../preprocessing_year.h5'`. \n",
-    "- **random**: The training, validation and test datasets have been generated at image level. That is, totally random, meaning that images from same sequences may be found in different sets. These parameters are found under `'../preprocessing_random.h5'`.\n",
-    "\n",
-    "These files, contain (for shapes 256x256 and 128x128) the following preprocessing parameters:\n",
+    "We note that 256x256 images have been used. The file contains the following preprocessing parameters:\n",
     "\n",
     "- Mean image: Image containing the mean for each pixel location.\n",
     "- Pixel mean: Overal pixel intensity mean (scalar value).\n",
@@ -292,40 +278,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "generate_params = False\n",
     "if generate_params:\n",
     "    from pyphoon.app.preprocess import generate_preprocess_params\n",
-    "    generate_preprocess_params(X_train, \"../preprocessing_year.h5\")"
+    "    generate_preprocess_params(X_train, \"../preprocessing_year_19042018.h5\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us actually load the repository preprocessing parameters and preprocess the data. We resize the images, so as to work with 256 x 256 images instead of 512x512. Finally, we reshape the arrays such that they can be used by Keras."
+    "Let us actually load the repository preprocessing parameters and preprocess the data. Finally, we reshape the arrays such that they can be used by Keras."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import h5py\n",
+    "from pyphoon.app.preprocess import MeanImagePreprocessor\n",
+    "\n",
     "# Define preprocessor\n",
     "with h5py.File('../preprocessing_year.h5') as f:\n",
-    "    mean = f.get('image_mean').value, (256, 256)\n",
+    "    mean = f.get('image_mean').value\n",
     "    scale_factor = f.get('max_value').value - f.get('min_value').value\n",
     "\n",
-    "preprocessor = MeanImagePreprocessor(mean, scale_factor, add_axis=[3], resize_factor=(256, 256))"
+    "preprocessor = MeanImagePreprocessor(mean, scale_factor, add_axis=[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorboard.backend.event_processing.event_accumulator import EventAccumulator\n",
+    "# Import keras libraries\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, Activation\n",
+    "from keras.layers.normalization import BatchNormalization\n",
+    "from keras.optimizers import SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,11 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "foldername = 'results'\n",
+    "from pyphoon.app.callbacks import StoreModelWeights, OurTensorBoard, LossHistory\n",
+    "\n",
+    "foldername = 'results_25042018'\n",
     "storeweights_callback = StoreModelWeights(foldername, naming=\"val_acc\")\n",
     "tensorboard_callback = OurTensorBoard(foldername)\n",
     "loss_callback = LossHistory()\n",
@@ -450,13 +455,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 Train\n",
-    "Finally, To feed our model with input data we will use a data generator, provided by method `data_generator` from `pyphoon.app.utils`."
+    "### 3.3 Training\n",
+    "Finally, To feed our model with input data we will use a data generator, provided by class `DataGeneratorFromChunklist` from `pyphoon.app.utils`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -464,53 +469,59 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "767/767 [==============================] - 37s 49ms/step - loss: 0.1505 - acc: 0.9429 - val_loss: 0.1305 - val_acc: 0.9536\n",
+      "780/780 [==============================] - 36s 46ms/step - loss: 0.1485 - acc: 0.9449 - val_loss: 0.1332 - val_acc: 0.9458\n",
       "Epoch 2/10\n",
-      "767/767 [==============================] - 35s 45ms/step - loss: 0.1130 - acc: 0.9584 - val_loss: 0.1144 - val_acc: 0.9563\n",
+      "780/780 [==============================] - 34s 44ms/step - loss: 0.1153 - acc: 0.9585 - val_loss: 0.1432 - val_acc: 0.9433\n",
       "Epoch 3/10\n",
-      "767/767 [==============================] - 35s 46ms/step - loss: 0.1035 - acc: 0.9615 - val_loss: 0.1257 - val_acc: 0.9541\n",
+      "780/780 [==============================] - 34s 44ms/step - loss: 0.1053 - acc: 0.9625 - val_loss: 0.1499 - val_acc: 0.9388\n",
       "Epoch 4/10\n",
-      "767/767 [==============================] - 38s 49ms/step - loss: 0.0947 - acc: 0.9668 - val_loss: 0.1365 - val_acc: 0.9382\n",
+      "780/780 [==============================] - 35s 44ms/step - loss: 0.0900 - acc: 0.9689 - val_loss: 0.1646 - val_acc: 0.9319\n",
       "Epoch 5/10\n",
-      "767/767 [==============================] - 35s 46ms/step - loss: 0.0865 - acc: 0.9704 - val_loss: 0.1231 - val_acc: 0.9518\n",
+      "780/780 [==============================] - 35s 45ms/step - loss: 0.0819 - acc: 0.9720 - val_loss: 0.1419 - val_acc: 0.9439\n",
       "Epoch 6/10\n",
-      "767/767 [==============================] - 33s 43ms/step - loss: 0.0802 - acc: 0.9716 - val_loss: 0.1364 - val_acc: 0.9448\n",
+      "780/780 [==============================] - 35s 45ms/step - loss: 0.0784 - acc: 0.9724 - val_loss: 0.1608 - val_acc: 0.9421\n",
       "Epoch 7/10\n",
-      "767/767 [==============================] - 36s 47ms/step - loss: 0.0760 - acc: 0.9729 - val_loss: 0.1150 - val_acc: 0.9527\n",
+      "780/780 [==============================] - 35s 44ms/step - loss: 0.0783 - acc: 0.9737 - val_loss: 0.1419 - val_acc: 0.9427\n",
       "Epoch 8/10\n",
-      "767/767 [==============================] - 35s 45ms/step - loss: 0.0749 - acc: 0.9738 - val_loss: 0.0942 - val_acc: 0.9627\n",
+      "780/780 [==============================] - 34s 44ms/step - loss: 0.0726 - acc: 0.9756 - val_loss: 0.2019 - val_acc: 0.9229\n",
       "Epoch 9/10\n",
-      "767/767 [==============================] - 36s 46ms/step - loss: 0.0703 - acc: 0.9766 - val_loss: 0.1782 - val_acc: 0.9321\n",
+      "780/780 [==============================] - 34s 44ms/step - loss: 0.0653 - acc: 0.9791 - val_loss: 0.1221 - val_acc: 0.9525\n",
       "Epoch 10/10\n",
-      "767/767 [==============================] - 35s 46ms/step - loss: 0.0728 - acc: 0.9748 - val_loss: 0.1115 - val_acc: 0.9543\n"
+      "780/780 [==============================] - 34s 44ms/step - loss: 0.0656 - acc: 0.9776 - val_loss: 0.1932 - val_acc: 0.9268\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2b8c63a037f0>"
+       "<keras.callbacks.History at 0x2b0630de6208>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Number train samples\n",
-    "n_train = sum([len(x) for x in Y_train])\n",
-    "n_valid = sum([len(x) for x in Y_valid])\n",
+    "from pyphoon.app.utils import DataGeneratorFromChunklist\n",
+    "import numpy as np\n",
+    "\n",
+    "# Number steps\n",
+    "n_steps_train = sum([np.ceil(len(x)/batch_size) for x in Y_train])\n",
+    "n_steps_valid = sum([np.ceil(len(x)/batch_size) for x in Y_valid])\n",
     "\n",
     "# Number of full epochs, i.e. #times algorithm sees all the data\n",
     "epochs = 10\n",
     "batch_size = 32\n",
     "\n",
+    "# Define data generator\n",
+    "generator = DataGeneratorFromChunklist(batch_sz=batch_size)\n",
+    "\n",
     "# Train\n",
     "model.fit_generator(\n",
-    "    generator=data_generator_from_chunklist(X_train, Y_train, batch_sz=batch_size),\n",
-    "    steps_per_epoch=n_train // batch_size,\n",
-    "    validation_data=data_generator_from_chunklist(X_valid, Y_valid, batch_sz=batch_size),\n",
-    "    validation_steps=n_valid // batch_size,\n",
+    "    generator=generator.feed(X_train, Y_train),\n",
+    "    steps_per_epoch=n_steps_train,\n",
+    "    validation_data=generator.feed(X_valid, Y_valid),\n",
+    "    validation_steps=n_steps_valid,\n",
     "    epochs=epochs,\n",
     "    callbacks=callbacks\n",
     ")"
@@ -520,13 +531,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 Load pre-trained weights\n",
+    "### 3.4 Load pre-trained weights\n",
     "Here we load the weights that provided the best performance and evaluate the performance on the test data. l."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights('results_25042018/weights/weights-improvement-09-0.9525.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,27 +557,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5.1 Test accuracy\n",
+    "## 4. Results\n",
+    "### 4.1 Test accuracy\n",
     "We evaluate the model that performed best on the validation set on the test set. This is the final performance of our model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on validation set: 0.949081440764\n"
+      "Accuracy on validation set: 0.938810935918\n"
      ]
     }
    ],
@@ -578,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 Confusion matrix, precision, recall"
+    "### 4.2 Confusion matrix, precision, recall"
    ]
   },
   {
@@ -590,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -621,13 +635,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>TC</th>\n",
-       "      <td>3375</td>\n",
-       "      <td>89</td>\n",
+       "      <td>3380</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>xTC</th>\n",
-       "      <td>263</td>\n",
-       "      <td>3186</td>\n",
+       "      <td>339</td>\n",
+       "      <td>3110</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -635,11 +649,11 @@
       ],
       "text/plain": [
        "     predicted TC  predicted xTC\n",
-       "TC           3375             89\n",
-       "xTC           263           3186"
+       "TC           3380             84\n",
+       "xTC           339           3110"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,30 +661,11 @@
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "import pandas as pd\n",
+    "\n",
     "pd.DataFrame(confusion_matrix(y_true, y_pred), \n",
     "             columns=['predicted TC','predicted xTC'], \n",
     "             index=['TC','xTC']\n",
     "            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.972824427480916"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3186/(3186+89)"
    ]
   },
   {
@@ -692,19 +687,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision: 0.972824427481\n",
-      "Recall: 0.923746013337\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "\n",
     "p = precision_score(y_true, y_pred)\n",
     "r = recall_score(y_true, y_pred)\n",
     "\n",
@@ -723,7 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3 Accuracy/Loss curves\n",
+    "### 4.3 Accuracy/Loss curves\n",
     "We now obtain the loss and accuracy curves on the training and validation sets. Note that this only works if you run the training with Tensorboard, since it uses the log history to retrieve the validation and accuracy curves. "
    ]
   },
@@ -746,6 +735,8 @@
     }
    ],
    "source": [
+    "from os.path import join\n",
+    "\n",
     "# Make surefrom os import listdir\n",
     "listdir(join(foldername, 'tensorboard_log'))"
    ]
@@ -812,6 +803,8 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# Loss\n",
     "plt.plot(subepochs, train_loss, 'k')\n",
     "plt.plot(subepochs, val_loss, 'k--')\n",
