--- a/experiments/tcxtc/notebooks/Final_Model.ipynb
+++ b/experiments/tcxtc/notebooks/Final_Model.ipynb
@@ -9,14 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 0. Load libraries\n",
-    "Anything will work if there are no libraries imported. So lets import!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -145,21 +137,21 @@
     "                                                             train_chunk_filenames, \n",
     "                                                             features=['data', 'class', 'idx', 'seq_no'],\n",
     "                                                             ignore_classes=[7],\n",
-    "                                                             display=True\n",
+    "                                                             verbose=True\n",
     "                                                             )\n",
     "\n",
     "X_valid, Y_valid, idx_valid, seqno_valid = load_h5datachunks(dataset_dir,\n",
     "                                                             valid_chunk_filenames, \n",
     "                                                             features=['data', 'class', 'idx', 'seq_no'],\n",
     "                                                             ignore_classes=[7],\n",
-    "                                                             display=True\n",
+    "                                                             verbose=True\n",
     "                                                            )\n",
     "\n",
     "X_test, Y_test, idx_test, seqno_test = load_h5datachunks(dataset_dir, \n",
     "                                                         test_chunk_filenames, \n",
     "                                                         features=['data', 'class', 'idx', 'seq_no'],\n",
     "                                                         ignore_classes=[7],\n",
-    "                                                         display=True\n",
+    "                                                         verbose=True\n",
     "                                                         )"
    ]
   },
@@ -218,7 +210,7 @@
     "    # Get labels and valid positions\n",
     "    Y_train[i], pos = parse_to_tcxtc_task(Y_train[i])\n",
     "    # Retrieve corresponding samples\n",
-    "    X_train[i] = (X_train[i][pos])\n",
+    "    X_train[i] = X_train[i][pos]\n",
     "    idx_train[i] = idx_train[i][pos]\n",
     "    seqno_train[i][pos] = seqno_train[i][pos]"
    ]
@@ -273,7 +265,7 @@
     "- Pixel maximum value: Overall maximum pixel intensity value (scalar value).\n",
     "- Pixel minimum value: Overall minimum pixel intensity value (scalar value).\n",
     "\n",
-    "Depending on your needs, you may use `MeanImagePreprocessor` or`DefaultImagePreprocessor` to preprocess your data. Generation of these files is easy, and is done by `pyphoon.app.preprocess.generate_preprocess_params`. Set variable `generate_params` below to True to do so, however, the repository already provides precomputed preprocessing parameters."
+    "Depending on your needs, you may use `MeanImagePreprocessor` or `DefaultImagePreprocessor` to preprocess your data. Generation of these files is easy, and is done by `pyphoon.app.preprocess.generate_preprocess_params`. Set variable `generate_params` below to **`True`** to do so, however, the repository already provides precomputed preprocessing parameters so you don't have to regenerate them."
    ]
   },
   {
@@ -285,7 +277,7 @@
     "generate_params = False\n",
     "if generate_params:\n",
     "    from pyphoon.app.preprocess import generate_preprocess_params\n",
-    "    generate_preprocess_params(X_train, \"../preprocessing_year_19042018.h5\")"
+    "    generate_preprocess_params(X_train, \"../preprocessing_year.h5\")"
    ]
   },
   {
@@ -313,23 +305,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expand dimensions to be suitable for friend keras\n",
-    "X_train = [preprocessor.apply(x) for x in X_train]\n",
-    "X_valid = [preprocessor.apply(x) for x in X_valid]\n",
-    "X_test = [preprocessor.apply(x) for x in X_test]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 3. Model\n",
-    "In this section we will define our models architecture and will train it from scratch. Alternatively, you may refer to section 3.3 to load pretrained weights.\n",
+    "In this section we will define our models architecture and will train it from scratch. Alternatively, you may refer to section 3.3 to load pretrained weights. However, make sure to define the model architecture first.\n",
     "\n",
     "### 3.1. Model architecture\n",
     "Now, time to define our model. We directly implement the final architecture, with the hyper-parameters that provided best result during the grid search."
@@ -341,8 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorboard.backend.event_processing.event_accumulator import EventAccumulator\n",
-    "# Import keras libraries\n",
+    "# Import keras/TF libraries\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, Activation\n",
     "from keras.layers.normalization import BatchNormalization\n",
@@ -424,7 +403,7 @@
    "metadata": {},
    "source": [
     "### 3.2 Callbacks\n",
-    "Before training, we will define some usefull callbacks to supervise the training process. One of the most usefull callbacks is [Tensorboard](https://www.tensorflow.org/programmers_guide/summaries_and_tensorboard), which enables easy visualisation of loss and accuracy curves.\n",
+    "Before training, we will define some usefull callbacks to supervise the training process. Personalised callbacks can be found in module `pyphoon.app.callbacks`. One of the most usefull callbacks is [Tensorboard](https://www.tensorflow.org/programmers_guide/summaries_and_tensorboard), which enables easy visualisation of loss and accuracy curves.\n",
     "\n",
     "Make sure to use the following command to run the tensorboard client.\n",
     "\n",
@@ -514,8 +493,9 @@
     "batch_size = 32\n",
     "\n",
     "# Define data generator\n",
-    "generator = DataGeneratorFromChunklist(batch_sz=batch_size)\n",
-    "\n",
+    "generator = DataGeneratorFromChunklist(batch_sz=batch_size, \n",
+    "                                       preprocess_algorithm=preprocessor.apply\n",
+    "                                      )\n",
     "# Train\n",
     "model.fit_generator(\n",
     "    generator=generator.feed(X_train, Y_train),\n",
@@ -533,15 +513,6 @@
    "source": [
     "### 3.4 Load pre-trained weights\n",
     "Here we load the weights that provided the best performance and evaluate the performance on the test data. l."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.load_weights('results_25042018/weights/weights-improvement-09-0.9525.hdf5')"
    ]
   },
   {
@@ -762,6 +733,8 @@
     }
    ],
    "source": [
+    "from tensorboard.backend.event_processing.event_accumulator import EventAccumulator\n",
+    "\n",
     "path_log_file = 'results_2/tensorboard_log/events.out.tfevents.1523545504.97c10ae7d2cf'\n",
     "event_acc = EventAccumulator(path_log_file)\n",
     "event_acc.Reload()\n",
