--- a/experiments/tcxtc/notebooks/Results.ipynb
+++ b/experiments/tcxtc/notebooks/Results.ipynb
@@ -457,7 +457,7 @@
     }
    ],
    "source": [
-    "C = get_activations(model, 'dropout_1', X_tc, dense=True, expand=True)\n",
+    "C = get_activations(model, 'dropout_1', X_tc, dense=True, expand=10)\n",
     "plt.gcf().clear()\n",
     "im = plt.imshow(C)\n",
     "plt.colorbar(im)\n",
@@ -466,7 +466,7 @@
     "# plt.savefig('../_assets/example_activation_l3_tc.eps', format='eps')\n",
     "plt.show()\n",
     "\n",
-    "C = get_activations(model, 'batch_normalization_5', X_tc, dense=True, expand=True)\n",
+    "C = get_activations(model, 'batch_normalization_5', X_tc, dense=True, expand=10)\n",
     "plt.gcf().clear()\n",
     "im = plt.imshow(C)\n",
     "plt.axis('off')\n",
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "C = get_activations(model, 'dropout_1', X_xtc, dense=True, expand=True)\n",
+    "C = get_activations(model, 'dropout_1', X_xtc, dense=True, expand=10)\n",
     "plt.gcf().clear()\n",
     "im = plt.imshow(C)\n",
     "plt.colorbar(im)\n",
@@ -519,7 +519,7 @@
     "# plt.savefig('../_assets/example_activation_l3_tc.eps', format='eps')\n",
     "plt.show()\n",
     "\n",
-    "C = get_activations(model, 'batch_normalization_5', X_xtc, dense=True, expand=True)\n",
+    "C = get_activations(model, 'batch_normalization_5', X_xtc, dense=True, expand=10)\n",
     "plt.gcf().clear()\n",
     "plt.axis('off')\n",
     "im = plt.imshow(C)\n",
